[package]
name = "urlqstring"
version = "0.3.3"
authors = ["zmant <zmant724@aliyun.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
keywords = ["url", "querystring", "PercentCode"]
description = "A URL query string for rust"
repository = "https://github.com/Itanq/urlqstring"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]